--- a/style.css
+++ b/style.css
@@ -5,16 +5,24 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
 .highlight{
     color: #FFCA1B;
 }
 .half{
     width: 40%;
     float: left;
-    margin-left: 5%;
+    margin-left: 4%;
     padding-left: 3%;
 }
+
 .half img{
+    margin: auto;
     width: 100%;
 }
 .top-banner{
@@ -23,6 +31,7 @@ h1{
 }
 section{
     height: 500px;
+    padding-bottom: 150px;
 }
 .link-button{
     text-decoration: none;
@@ -32,4 +41,9 @@ section{
     border-radius: 5px;
     color: white;
     font-weight: 700;
+}
+.dream{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+   background-position:right;
 }
