--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ section{
 }
 .link-button{
     text-decoration: none;
-    background-color: #FFCA1B;
+    background-color: rgb(255, 202, 28);
     background-image: linear-gradient(45deg, lightSalmon,tomato);
     padding: 10px 20px;
     border-radius: 5px;
@@ -46,4 +46,32 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
    background-position:right;
+}
+.Ex{
+    background-image: linear-gradient(120deg, #fada84 0%, #f4ea8f 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: 0 88%;
+    transition: background-size 0.25s ease-in;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+}
+.experiance-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: line;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightSalmon, tomato );
+    border-image-slice: 1;
+
+}
+#Junior{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, rgb(242, 255, 122), rgb(255, 206, 71) );
+    border-image-slice: 1;
 }
